New Image Reject Filter (IP dependent).
New DAC modes (IP dependent).
Second Nyquist zone inerse sinc filter (IP dependent).
Support for alternative DAC bondout (IP dependent).
New ADC signal detector (IP dependent).
New calibration override APIs (IP dependent).
Extended coarse delay (IP dependent).
New clock distribution network with integer clock division(IP dependent).

libmetal_v2_0:
Updated shared memory APIs to decouple from shmem allocation implementation
Sync up libmetal upstream 5774af1b8e28ea39cbf92ae131eee4f93af699b2
CPP atomic bug fix;
metal io region offset<->phy to support the OS which has function to do
this conversion;
interrupt API update to separate IRQ controller implementation and
device driver interrupt handling.

axiethernet_v5_9:
In tcl use unique global variables to fix bsp generation for certain designs.

canfd_v2_1:
Update fifo number to read data from RX FIFO 0 or RX FIFO 1
Fix incorrect setting of data phase buad rate prescaler

csudma_v1_4:
Adds PSU_PMU processor check to skip the Flushing cache memory and Invalidating
cache memory API's for PMU Microblaze platform.
Add support for versal IP name.

emaclite_v4_4:
Fix poll example failure on microblaze platform.

emacps_v3_9:
Add support for RX watermark
Update example for versal emulation
Use selected speed in loopback mode
Fix MDC divisor for versal emulation
Fix BD memory allocation and its attributes
Fix alignment pragmas for IAR compiler.

freertos10_xilinx_v1_3:
Declared attribute of vApplicationAssert() as weak in
portZynqUltrascale.c for A53. It fixes CR#1014562
Upgraded FreeRTOS to new version 10.1.1 (PR#10686)
Provided feature for stream buffer and message buffer.(PR#10459)
Add support for hard float in R5 freertos adapter.

hwicap_v11_2:
Updated the Number of words per frame as mention in the ug570.
Removed .o referenced function prototypes from the header file.

iicps_v3_9:
Added arbitration lost support in polled transfer

ipipsu_v2_5: